# dlsh

./: Makefile  README.md  examples.sh
dlsh/: .gitignore  Cargo.toml
dlsh/src/: acc.rs  activate.rs  augment.rs  data.rs  linear.rs  loss.rs  mse.rs  relu.rs  sigmoid.rs
examples/: categorical.sh  perceptron.sh  perceptron_2.sh  perceptron_multiply.sh  perceptron_xor.sh
sh/: act  bp  kl  mse  relu  sigmoid  softmax
