[package]
name = "dlsh"
version = "0.1.0"
authors = ["cympfh <cympfh@gmail.com>"]
edition = "2018"

[[bin]]
name = "linear"
path = "src/linear.rs"

[[bin]]
name = "activate"
path = "src/activate.rs"

[[bin]]
name = "loss"
path = "src/loss.rs"

[[bin]]
name = "acc"
path = "src/acc.rs"

[[bin]]
name = "augment"
path = "src/augment.rs"

[dependencies]
structopt = "0.3"
rand = "0.7.2"
rand_distr = "0.2.2"
